--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,25 +1,19 @@
-name: Simple CI
+name: CI using Docker
 
 on:
   push:
     branches: [ "main" ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+      docker_test:
+         runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install dependencies
-        run: python -m pip install pytest
-
-      - name: Run tests
-        run: python -m pytest
-
+      - name: Build Docker Image
+        uses: docker build  -t ci-cd-app-test .
+     
+      - name: Run tests inside docker
+        run: docker run ci-cd-app-test
