--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,15 +5,15 @@ on:
     branches: [ "main" ]
 
 jobs:
-      docker_test:
-         runs-on: ubuntu-latest
+  docker-test:
+    runs-on: ubuntu-latest
 
     steps:
-      	- name: Checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-     	 - name: Build Docker Image
-        uses: docker build  -t ci-cd-app-test .
-     
-     	 - name: Run tests inside docker
+      - name: Build Docker image
+        run: docker build -t ci-cd-app-test .
+
+      - name: Run tests inside Docker
         run: docker run ci-cd-app-test
